Add _knn_eval PoC for DiskBBQ recall estimation